<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.antwinner_kotlin.ui.home.HomeFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_theme_detail"
        android:name="com.example.antwinner_kotlin.ui.themedetail.ThemeDetailFragment"
        android:label="@string/menu_theme_detail"
        tools:layout="@layout/fragment_theme_detail" />

    <fragment
        android:id="@+id/navigation_theme_schedule"
        android:name="com.example.antwinner_kotlin.ui.themeschedule.ThemeScheduleFragment"
        android:label="@string/menu_theme_schedule"
        tools:layout="@layout/fragment_theme_schedule" />
</navigation> 